[package]
name = "rando-photo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
clap = { version = "4.5.31", features = ["derive", "env"] }
dotenvy = "0.15.7"
glob = "0.3.2"
pathdiff = "0.2.3"
rand = "0.9.0"
serde = "1.0.218"
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.39", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
